scripts/nullness/original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/Test.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: result, fixture
	public Test (String newName) {
	       ^
../original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/ResultPrinter.java:17: error: [assignment] incompatible types in assignment.
	private static ResultPrinter instance = null;
	                                        ^
  found   : null (NullType)
  required: @Initialized @NonNull ResultPrinter
2 errors
